    file contents to be deleted after some period of time.
  * webapp: Nudge user to see if they want to expire old unused file
    contents when a lot of them seem to be piling up in the repository.
  * repair: Check git version at run time.
  * assistant: Run the periodic git gc in batch mode.
  * added annex.secure-erase-command config option.
  * Optimise non-bare http remotes; no longer does a 404 to the wrong
    url every time before trying the right url. Needs annex-bare to be
    set to false, which is done when initially probing the uuid of a
    http remote.
  * webapp: After upgrading a git repository to git-annex, fix
    bug that made it temporarily not be synced with.
  * whereis: Support --all.
  * All commands that support --all also support a --key option,
    which limits them to acting on a single key.

 -- Joey Hess <joeyh@debian.org>  Mon, 27 Jan 2014 13:43:28 -0400

git-annex (5.20140117) unstable; urgency=medium

  * Really fix FTBFS on mipsel and sparc due to test suite not being available
    on those architectures.

 -- Joey Hess <joeyh@debian.org>  Fri, 17 Jan 2014 14:46:27 -0400

git-annex (5.20140116) unstable; urgency=medium

  * Added tahoe special remote.
  * external special remote protocol: Added GETGITDIR, and GETAVAILABILITY.
  * Refuse to build with git older than 1.7.1.1, which is needed for
    git checkout -B
  * map: Fix display of v5 direct mode repos.
  * repair: Support old git versions from before git fsck --no-dangling was
    implemented.
  * Fix a long-standing bug that could cause the wrong index file to be used
    when committing to the git-annex branch, if GIT_INDEX_FILE is set in the
    environment. This typically resulted in git-annex branch log files being
    committed to the master branch and later showing up in the work tree.
    (These log files can be safely removed.)
  * assistant: Detect if .git/annex/index is corrupt at startup, and
    recover.