@@ -114,7 +114,7 @@ Executable git-annex
     CPP-Options: -DWITH_CLIBS
 
   if flag(TestSuite)
-    Build-Depends: tasty (>= 0.7), tasty-hunit, tasty-quickcheck,
+    Build-Depends: tasty (>= 0.7), tasty-hunit, tasty-quickcheck, tasty-rerun,
      optparse-applicative
     CPP-Options: -DWITH_TESTSUITE
 
