@@ -30,6 +30,7 @@ git-annex (5.20140127) unstable; urgency=medium
   * repair: Check git version at run time.
   * assistant: Run the periodic git gc in batch mode.
   * added annex.secure-erase-command config option.
+  * test suite: Use tasty-rerun, and expose tasty command-line options.
   * Optimise non-bare http remotes; no longer does a 404 to the wrong
     url every time before trying the right url. Needs annex-bare to be
     set to false, which is done when initially probing the uuid of a
